# ConversationalAI_FastAPI

./: README.md  docker-compose.yml
conversational-chatbot/: .env  .python-version  Dockerfile  pyproject.toml  requirements.txt
conversational-chatbot/app/: main.py
conversational-chatbot/app/api/: deps.py
conversational-chatbot/app/api/v1/: controllers.py  routes.py
conversational-chatbot/app/core/: config.py
conversational-chatbot/app/services/: chatbot.py
conversational-chatbot/tests/: test_api.py
src/: main.py
src/api/: deps.py
src/api/v1/: controllers.py  routes.py
src/conversational_chatbot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/core/: logging.py
src/db/: session.py
src/models/: message.py
src/schemas/: message.py
src/utils/: tokenizer.py
