[tool]
name = "conversational-chatbot"
version = "0.1.0"
description = "A FastAPI project for a conversational agent chatbot."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
sqlalchemy = "^1.4.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
httpx = "^0.23.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"