

[project]
name = "conversational-chatbot"
version = "0.1.0"
description = "A FastAPI project for a conversational agent chatbot."
authors = [{ name = "parveen29analyst", email = "parveen29analyst@gmail.com" }]
license = "MIT"


[build-system]
requires = ["setuptools>=42","setuptools-scm"]
build-backend = "setuptools.build_meta"



dependencies=[

"fastapi >=0.115.13",
"uvicorn >=0.17.0",
"pydantic >=1.9.0",
"sqlalchemy >=1.4.0",

"langchain >=0.0.25",
"langchain-community==0.2.17",
"langchain-core=>0.3.76",
"langchain-google-vertexai>=2.0.28",
"langchain-text-splitters==0.3.8",
"elasticsearch  >= 8.11.0",
"furl >= 2.1.3",
"google-auth >=2.23.0",
"google-api-python-client >=2.108.0",
"sqlalchemy==2.0.40",
"sentence-transformers==2.2.2",
"uvicorn==0.25.0",
"werkzeug==2.2.2",
"requests==2.32.3",
"requests-aws4auth==1.1.2",
"python-dotenv==1.1.2",
"python-dateutil==2.9.0",
"pyodbc>=5.2.0",
"openai>=1.59.6",
"pydantic>=2.9,<3.0",
"numpy==1.26.4",
]
requires-python=">=3.12"

[tool.ruff.format]
quote-style="double"
[tool.ruff.lint]
select=["I","UP","PL","F401"]

[tool.uv]
allow-insecure-host=[
    "pkgs.dev.azure.com"]

[[tool.uv.index]]
url="https://pypi.org/simple"
default=true

[tool.pyright]
typeCheckingMode="standard"
[depenency-groups]
dev=["ipykernel>=6.29.5",
"ipython>=8.31.0",
"mypy>=1.14.1",
"pip>=24.3.1",
"pytest-cov>=6.0.0",
"pytest>=8.3.4",
"ruff>=0.12.8",
"pyright[nodejs]>=1.1.406",
]

